[tool.poetry]
name = "nm"
version = "0.1.0"
description = ""
authors = ["Jan Willems <jw@elevenbts.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dbus-next = "^0.1.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pre-commit = "^2.6.0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
